--- a/firebase-functions/functions/package.json
+++ b/firebase-functions/functions/package.json
@@ -1,7 +1,8 @@
 {
     "name": "functions",
-    "description": "Cloud Functions for Firebase",
+    "description": "Cloud Functions for ResumeForge",
     "scripts": {
+        "lint": "eslint .",
         "serve": "firebase emulators:start --only functions",
         "shell": "firebase functions:shell",
         "start": "npm run shell",
@@ -9,14 +10,19 @@
         "logs": "firebase functions:log"
     },
     "engines": {
-        "node": "22"
+        "node": "20"
     },
     "main": "index.js",
     "dependencies": {
-        "firebase-admin": "^11.8.0",
-        "firebase-functions": "^4.3.1"
+        "firebase-admin": "^11.5.0",
+        "firebase-functions": "^4.3.1",
+        "@google/generative-ai": "^0.1.3",
+        "cloudconvert": "^2.3.7",
+        "node-fetch": "^3.3.2"
     },
     "devDependencies": {
+        "eslint": "^8.9.0",
+        "eslint-config-google": "^0.14.0",
         "firebase-functions-test": "^3.1.0"
     },
     "private": true
